--- a/Accountool/Views/Home/Index.cshtml
+++ b/Accountool/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
-﻿@{
+﻿@model Accountool.Models.ViewModel.MeasureWithIndication
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <main role="main" class="pb-3">
+        <div class="row">
+            <div class="col-md-2 border border-primary border-right shadow box-shadow">
+                @Html.Partial("./../MeasureTypes/_MeasureMenu", Model.MeasureTypes)
+            </div>
+            <div class="col-md-10">
+                @Html.Partial("./../Indications/Index", Model.Indications)
+            </div>
+        </div>
+    </main>
 </div>
