--- a/Accountool/Views/MeasureTypes/Create.cshtml
+++ b/Accountool/Views/MeasureTypes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Accountool.Models.Entities.Town
+﻿@model Accountool.Models.Entities.MeasureType
 
 @{
     ViewData["Title"] = "Create";
@@ -7,7 +7,7 @@
 
 <h1>Create</h1>
 
-<h4>Town</h4>
+<h4>MeasureType</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
