--- a/Accountool/Views/MeasureTypes/Details.cshtml
+++ b/Accountool/Views/MeasureTypes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Accountool.Models.Entities.Town
+﻿@model Accountool.Models.Entities.MeasureType
 
 @{
     ViewData["Title"] = "Details";
@@ -8,7 +8,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Town</h4>
+    <h4>MeasureType</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
