--- a/Accountool/Views/MeasureTypes/Index.cshtml
+++ b/Accountool/Views/MeasureTypes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Accountool.Models.Entities.Town>
+﻿@model IEnumerable<Accountool.Models.Entities.MeasureType>
 
 @{
     ViewData["Title"] = "Index";
