--- a/Accountool/Views/MeasureTypes/Delete.cshtml
+++ b/Accountool/Views/MeasureTypes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Accountool.Models.Entities.Town
+﻿@model Accountool.Models.Entities.MeasureType
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Town</h4>
+    <h4>MeasureType</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
