--- a/Accountool/Views/Indications/Index.cshtml
+++ b/Accountool/Views/Indications/Index.cshtml
@@ -12,6 +12,9 @@
                 @Html.DisplayNameFor(model => model.Month)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Value)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Tarif1)
             </th>
             <th>
@@ -34,6 +37,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Month)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Value)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Tarif1)
