modified:   Accountool/Accountool.csproj modified:   Accountool/Controllers/HomeController.cs new file:   Accountool/Controllers/IdentityController.cs modified:   Accountool/Controllers/IndicationsController.cs modified:   Accountool/Controllers/TownsController.cs new file:   Accountool/Models/Models/FullIndicationModel.cs modified:   Accountool/Models/Services/MeasurementService.cs new file:   Accountool/Models/Services/ServiceModel/FirstLastYearModel.cs new file:   Accountool/Models/Services/ServiceModel/IdNameModel.cs modified:   Accountool/Models/ViewModel/MeasureWithIndication.cs modified:   Accountool/Program.cs new file:   Accountool/Utils/Class.cs new file:   Accountool/Utils/Constants.cs modified:   Accountool/Views/Home/Index.cshtml new file:   Accountool/Views/Identity/Identities.cshtml modified:   Accountool/Views/Indications/Index.cshtml new file:   Accountool/Views/Measure/Index.cshtml modified:   Accountool/Views/Shared/_Layout.cshtml deleted:    Accountool/queries.sql modified:   DB/CREATE Accountool.sql

--- a/Accountool/Views/Indications/Index.cshtml
+++ b/Accountool/Views/Indications/Index.cshtml
@@ -1,67 +1,55 @@
-﻿@model IEnumerable<Accountool.Models.Entities.Indication>
+﻿@model IEnumerable<Accountool.Models.Models.FullIndicationModel>
 
-<h1>@ViewBag.TitleMeasureType</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Month)
+                @Html.DisplayNameFor(model => model.KioskName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Value)
+                @Html.DisplayNameFor(model => model.TownName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tarif1)
+                @Html.DisplayNameFor(model => model.Address)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tarif2)
+                @Html.DisplayNameFor(model => model.Indication.Month)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TarifSumm)
+                @Html.DisplayNameFor(model => model.Indication.Tarif1)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Archive)
+                @Html.DisplayNameFor(model => model.Indication.Value)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Schetchik)
-            </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Month)
+                @Html.DisplayFor(modelItem => item.KioskName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Value)
+                @Html.DisplayFor(model => item.TownName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Tarif1)
+                @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Tarif2)
+                @Html.DisplayFor(modelItem => item.Indication.Month)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TarifSumm)
+                @Html.DisplayFor(modelItem => item.Indication.Tarif1)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Archive)
+                @Html.DisplayFor(modelItem => item.Indication.Value)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Schetchik.ModelSchetchika)
+                    <input type="hidden" name="MeasureTypeId" value="@Model.FirstOrDefault()?.MeasureTypeId" />
+                <a asp-controller="Indications" asp-action="Edit" asp-route-id="@item.Indication.Id">Edit</a> |
+                <a asp-controller="Indications" asp-action="Details" asp-route-id="@item.Indication.Id">Details</a> |
+                <a asp-controller="Indications" asp-action="Delete" asp-route-id="@item.Indication.Id">Delete</a>
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        </tr>}
     </tbody>
 </table>
