--- a/Accountool/Views/Home/Index.cshtml
+++ b/Accountool/Views/Home/Index.cshtml
@@ -8,10 +8,14 @@
     <main role="main" class="pb-3">
         <div class="row">
             <div class="col-md-2 border border-primary border-right shadow box-shadow">
-                @Html.Partial("./../MeasureTypes/_MeasureMenu", Model.MeasureTypes)
+                <div class="row border border-primary border-right shadow box-shadow">
+                    @Html.Partial("./../MeasureTypes/_MeasureMenu", Model.MeasureTypes)
+                </div>
+                <div class="row border border-primary border-right shadow box-shadow">
+                </div>
             </div>
             <div class="col-md-10">
-                @Html.Partial("./../Indications/Index", Model.Indications)
+                @Html.Partial("./../Measure/Index", Model)
             </div>
         </div>
     </main>
