--- a/Accountool/Views/Shared/_Layout.cshtml
+++ b/Accountool/Views/Shared/_Layout.cshtml
@@ -27,12 +27,13 @@
                                 Create and change data
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-area="" asp-controller="Indications" asp-action="Index">Indications</a>
-                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" asp-area="" asp-controller="MeasureTypes" asp-action="Index">MeasureTypes</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" asp-area="" asp-controller="Towns" asp-action="Index">Towns</a>
                             </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Indications" asp-action="Index">Indications</a>
                         </li>
                     </ul>
                     <a class="navbar-brand mx-auto text-white" asp-area="" asp-controller="Home" asp-action="Index">Name of your company</a>
