--- a/Accountool/Views/Home/Index.cshtml
+++ b/Accountool/Views/Home/Index.cshtml
@@ -7,15 +7,8 @@
 <div class="container">
     <main role="main" class="pb-3">
         <div class="row">
-            <div class="col-md-2 border border-primary border-right shadow box-shadow">
-                <div class="row border border-primary border-right shadow box-shadow">
-                    @Html.Partial("./../MeasureTypes/_MeasureMenu", Model.MeasureTypes)
-                </div>
-                <div class="row border border-primary border-right shadow box-shadow">
-                </div>
-            </div>
-            <div class="col-md-10">
-                @Html.Partial("./../Measure/Index", Model)
+            <div class="col-md-12 border border-primary border-right shadow box-shadow text-center">
+                <h1>Welcome to Your Organization Account tool</h1>
             </div>
         </div>
     </main>
