Started adding prediction and fixed creating and editing indications

--- a/Accountool/Views/Home/Index.cshtml
+++ b/Accountool/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model Accountool.Models.ViewModel.MeasureWithIndication
-
+﻿@model string
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -9,6 +8,7 @@
         <div class="row">
             <div class="col-md-12 border border-primary border-right shadow box-shadow text-center">
                 <h1>Welcome to Your Organization Account tool</h1>
+                <h1>The predicted is @Model</h1>
             </div>
         </div>
     </main>
