--- a/Accountool/Views/Indications/Create.cshtml
+++ b/Accountool/Views/Indications/Create.cshtml
@@ -24,14 +24,9 @@
                 <span asp-validation-for="Tarif1" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Tarif2" class="control-label"></label>
-                <input asp-for="Tarif2" class="form-control" />
-                <span asp-validation-for="Tarif2" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TarifSumm" class="control-label"></label>
-                <input asp-for="TarifSumm" class="form-control" />
-                <span asp-validation-for="TarifSumm" class="text-danger"></span>
+                <label asp-for="Value" class="control-label"></label>
+                <input asp-for="Value" class="form-control" />
+                <span asp-validation-for="Value" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
